--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ flutter:
       elinux:
         pluginClass: FlowyMultimediaPlugin
         #dartPluginClass: FlowyMultimedia
+      linux:
+        pluginClass: FlowyMultimediaPlugin
     # -------------------
 
   # To add assets to your plugin package, add an assets section, like this:
